--- a/index.html
+++ b/index.html
@@ -277,13 +277,13 @@
         <p>Every moment with you is a treasure.</p>
         <div class="gallery-grid">
             <!-- Replace these sources with your actual image URLs -->
-            <div class="photo-card"><img src="https://images.unsplash.com/photo-1516589178581-6cd7833ae3b2?w=400"
+            <div class="photo-card"><img src="https://github.com/santhosh11032005/will-you-be-my-valentine/blob/main/image/love%201.jpeg?raw=true"
                     alt="Memory 1"></div>
-            <div class="photo-card"><img src="https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?w=400"
+            <div class="photo-card"><img src="https://github.com/santhosh11032005/will-you-be-my-valentine/blob/main/image/love%203.jpeg?raw=true"
                     alt="Memory 2"></div>
-            <div class="photo-card"><img src="https://images.unsplash.com/photo-1518199266791-5375a83190b7?w=400"
+            <div class="photo-card"><img src="https://github.com/santhosh11032005/will-you-be-my-valentine/blob/main/image/love%204.jpeg?raw=true"
                     alt="Memory 3"></div>
-            <div class="photo-card"><img src="https://images.unsplash.com/photo-1511988617509-a57c8a288659?w=400"
+            <div class="photo-card"><img src="https://github.com/santhosh11032005/will-you-be-my-valentine/blob/main/image/love2.jpeg?raw=true"
                     alt="Memory 4"></div>
         </div>
         <button class="btn" onclick="nextScreen('screen-letter')">Next -></button>
@@ -302,7 +302,7 @@
     <!-- Screen 4: Proposal -->
     <div class="container" id="screen-proposal">
         <h1>Will You Be My Valentine? 🌹</h1>
-        <p>You are my sunshine, my joy, and my everything.</p>
+        <p>Loving you is the best thing that ever happened to me.</p>
         <div class="proposal-btns">
             <button class="btn" id="yesBtn" onclick="acceptProposal()">YES! 😍</button>
             <button class="btn" id="noBtn" onmouseover="dodgeButton()" ontouchstart="dodgeButton()">No 😢</button>
@@ -329,7 +329,7 @@
         const YOUR_EMAIL = "demo@gmail.com";
 
         // ACTION: Customize your love letter here
-        const loveLetterText = "Dearest Love,\n\nFrom the moment I met you, my world has been brighter. Your smile is my favorite sight, and your laughter is my favorite sound.\n\nI cherish every moment we share, and I want to create a million more memories with you.\n\nSo, I have a very important question...";
+        const loveLetterText = "My Love,\n\nI just want to tell you how thankful I am to have you in my life. Thank you for being with me, for supporting me, and for loving me the way you do. Having you beside me means everything to me.\n\nYou are my happiness. You are my everything. You are the soul of my life. When I’m with you, my heart feels full, and my world feels brighter. Just being near you gives me a kind of joy I can’t explain.\n\nI don’t need anything else when I have you. I just want you beside me through every moment of my life. I want to grow with you, laugh with you, and hold your hand until my very last breath.I love you more than words can explain. Always and forever, it’s you.\n\nSo, I have a very important question...";
         /* --------------------- */
 
         // Particle System
