--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         const YOUR_EMAIL = "san11032005@gmail.com";
 
         // ACTION: Customize your love letter here
-        const loveLetterText = "My Love,\n\nI just want to tell you how thankful I am to have you in my life. Thank you for being with me, for supporting me, and for loving me the way you do. Having you beside me means everything to me.\n\nYou are my happiness. You are my everything. You are the soul of my life. When I’m with you, my heart feels full, and my world feels brighter. Just being near you gives me a kind of joy I can’t explain.\n\nI don’t need anything else when I have you. I just want you beside me through every moment of my life. I want to grow with you, laugh with you, and hold your hand until my very last breath.I love you more than words can explain. Always and forever, it’s you.\n\nSo, I have a very important question...";
+        const loveLetterText = "My Love,\n\nI just want to tell you how thankful I am to have you in my life.\n\nYou are my happiness. You are my everything. You are the soul of my life. When I’m with you, my heart feels full, and my world feels brighter. Just being near you gives me a kind of joy I can’t explain.\n\nI don’t need anything else when I have you. I just want you beside me through every moment of my life. I want to grow with you, laugh with you, and hold your hand until my very last breath.I love you more than words can explain.\n\nSo, I have a very important question...";
         /* --------------------- */
 
         // Particle System
