Update audio source URL to raw GitHub link

--- a/index.html
+++ b/index.html
@@ -319,8 +319,9 @@
 
     <!-- Audio -->
     <audio id="bgMusic" loop>
-        <source src="https://github.com/santhosh11032005/will-you-be-my-valentine/blob/af7084082d36538d13ad25b263a16f1ad578aa1d/audio/remo%20bgm.mp3" type="audio/mp3">
-    </audio>
+  <source src="https://raw.githubusercontent.com/santhosh11032005/will-you-be-my-valentine/main/audio/remo%20bgm.mp3" type="audio/mpeg">
+</audio>
+
     <div class="music-control" onclick="toggleMusic()">🎵</div>
 
     <script>
